{
    "name": "SpaceShipInput",
    "maps": [
        {
            "name": "SpaceShip",
            "id": "5635eb1e-6eed-441c-9a44-811a36d3a16f",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "aa25bf34-0bc0-4237-9637-852a65411cfc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActivateEngine",
                    "type": "Button",
                    "id": "c88f49e2-d13b-481c-bccc-a74b6f6c91de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootFirstWeapon",
                    "type": "Button",
                    "id": "719c0c8a-66ed-4ea7-b821-95ea7362cf1d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootSecondWeapon",
                    "type": "Button",
                    "id": "4ac98f76-530c-434c-9b4c-1ea76cd616fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "89a18ea6-be6d-4d20-81f6-4231ddf72416",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ActivateEngine",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c44e3ed6-875c-4b8e-af86-8a6f599ff90f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ShootFirstWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5b234f0-7699-44d1-9f97-7bdc53c32881",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ShootSecondWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Angle",
                    "id": "e455643f-e3ed-473a-a34b-649923f4e333",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "84951d81-0ca2-41c9-9a62-9b7c11e3f605",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0a7f2cba-e384-49a3-81f9-21546a9edd77",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}